[project]
name = "tomlmerge"
version = "0.1.0"
description = ""
authors = [
    {name = "Khan Kibria",email = "khan.kibria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "tomlmerge", from = "src"}]


[tool.poetry.scripts]
tomlmerge = "tomlmerge.tomlmerge:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
